| Summary: | ASTERISK-30075: say: Abort if channel hangs up during playback | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-05-21 20:37:57 | Date Closed: | 2022-06-30 16:25:09 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | PBX/General |
| Versions: | 18.9.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If a channel hangs up during say playback, we still go through all the filenames and fail.
This doesn't break anything, but we should be aborting and by failing to, it appears in the CLI as if files are being played, allowing things like this to happen: This fixes that by aborting if the channel hangs up. {noformat} [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/w.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/e.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/e.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/t.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/u.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/h.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/h.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/i.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/d.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/s.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/f.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/i.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/g.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/r.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/e.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/g.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/i.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/g.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/s.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/d.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/o.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/p.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/f.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/j.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/s.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/d.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/f.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/j.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/d.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/r.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/e.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/u.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/j.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/f.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/d.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/z.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/s.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/w.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/w.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/w.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/w.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/o.ulaw' (language 'en') [2022-05-22 01:29:01] -- <REDACTED> Playing 'letters/j.ulaw' (language 'en') {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-05-21 20:37:59.788-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-06-30 16:25:10.086-0500 Change 18575 merged by Friendly Automation: say: Abort play loop if caller hangs up. [https://gerrit.asterisk.org/c/asterisk/+/18575|https://gerrit.asterisk.org/c/asterisk/+/18575] By: Friendly Automation (friendly-automation) 2022-06-30 16:28:24.926-0500 Change 18714 merged by Friendly Automation: say: Abort play loop if caller hangs up. [https://gerrit.asterisk.org/c/asterisk/+/18714|https://gerrit.asterisk.org/c/asterisk/+/18714] By: Friendly Automation (friendly-automation) 2022-06-30 16:30:26.263-0500 Change 18713 merged by Friendly Automation: say: Abort play loop if caller hangs up. [https://gerrit.asterisk.org/c/asterisk/+/18713|https://gerrit.asterisk.org/c/asterisk/+/18713] By: Friendly Automation (friendly-automation) 2022-06-30 17:10:06.642-0500 Change 18715 merged by Friendly Automation: say: Abort play loop if caller hangs up. [https://gerrit.asterisk.org/c/asterisk/+/18715|https://gerrit.asterisk.org/c/asterisk/+/18715] | ||